talk-be/deploy/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
    - name: busybox
      image: busybox:1.28.4
      imagePullPolicy: IfNotPresent
  restartPolicy: Always
#  nslookup dbservice.default.svc.cluster.local
