talk-be/deploy/postgres-deplopment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: database
        type: postgres
    spec:
      containers:
        - name: postgres-container
          image: 'postgres:11.5'
          imagePullPolicy: 'IfNotPresent'
          ports:
            - containerPort: 5432
  selector:
    matchLabels:
      app: database
      type: postgres
