talk-be/deploy/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: nodejs
    type: backend
#  kubectl get services
#  minikube ssh
#  curl 10.101.156.17
