talk-be/deploy/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: database
    type: postgres
#  kubectl get services
#  minikube ssh
#  curl 10.101.156.17
